--- a/docroot/themes/custom/ucsf/scss/views/_view-news-filter.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-news-filter.scss
@@ -231,7 +231,7 @@
     padding-top: 365px;
 
     @include breakpoint($new-x-small-max) {
-      padding-top: 215px;
+      padding-top: 200px;
     }
   }
 }
